# ChangeLog for net-wireless/wimax
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/wimax/ChangeLog,v 1.1 2010/07/25 14:18:17 alexxy Exp $

*wimax-1.5 (25 Jul 2010)

  25 Jul 2010; Alexey Shvetsov <alexxy@gentoo.org> +wimax-1.5.ebuild,
  +files/wimax, +metadata.xml:
  Initial import of wimax network service. Currently it isnt working on
  64bit systems.
