@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX wimax 645 RMD160 acb0faee1c511555ffbe6ef1166b8c29c7d223e8 SHA1 91c75f394c7e0f142486757b2829f2457e22202e SHA256 70c3da198f97e6a68cfebf778af72791f29e7f746373b41c9435d59c0b65bdb5
+AUX wimax 648 RMD160 baf1cbcbea336001ccf02f320736c065be1eb2c0 SHA1 966520a76609e4f7710afd7d5daf0f58776947b2 SHA256 120727223bfb5d6a3c1a648615e4370c6da9a1ebc2214d569800922844b3e53d
 DIST wimax-1.5.tar.gz 2875992 RMD160 8cd63d506a6324b8ff490acb4c53ebbc94d5ca6c SHA1 a3f441cadec44d1db58f07faa416052fe313be2b SHA256 b8c71cddbacd9c25437708abef2816fed2e870e292c2ed25d76f69ab6a365e3a
-EBUILD wimax-1.5.ebuild 1099 RMD160 18916bc529c52e71f58465c79eb2b0efd69fba02 SHA1 4a68c48beafb644a2a3166e608bc91bd59affce7 SHA256 14d49c2f57e798d4b78473e47227562a8b4f018b4b2398b51cb020367853c0f5
-MISC ChangeLog 426 RMD160 bfdd9b439eca4cd2b2246d825f991e4024a151af SHA1 fa1840d6de158e0057f7255fd8ac9580d0bd4f4f SHA256 f7242f5ab07351f41faa535f2efcf1fa6430cff9187abd9bda83ad1dbcebe276
-MISC metadata.xml 251 RMD160 6696e4de4d89e9d9f68ff11e5290e0716051ed61 SHA1 68adff5234a2192a10d3ebdfd891182312459c41 SHA256 8e918a60690137d280b56f2a90eaf7292c2597a90018ab22751e71b5ab69851d
+EBUILD wimax-1.5.ebuild 1721 RMD160 e0411dd55f99955c772fad2bc15a8bff65445533 SHA1 14cbc0558fe1a4c65d4b7c8b7526c1d6ba4a4968 SHA256 ca5115928413f17407875d3cffff136aa4a7e82b184a09f4ba80a60e86d63a0b
+MISC ChangeLog 628 RMD160 7074139a4438db062c83067ea541c9aa0cfafd01 SHA1 798d57d1824fc022836c3d303b9ebc2882118ab2 SHA256 6ec4d57a2a673364e2ad627631549e3a9bd3bd53ebdd4e3d77e446e3563218ae
+MISC metadata.xml 250 RMD160 94be601f620e3158922f31ac28328a28665555a2 SHA1 ac8010695121148bf3593692aba56938187882c9 SHA256 aea796ea3b08f1f5ca77c34868298e406de62590afbf2662e87d094c3e0041f4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkxMR9MACgkQ5BmOA85PVLgK5ACfV+wGXl4VPLvPaKIVCZa8X+LD
-UA8AnjBlCCRCdzm/NVPKNE7ttNrxp3hO
-=nUw7
+iEYEARECAAYFAkxOCKgACgkQ5BmOA85PVLjblQCdFMrWJbxZTK6/klxCdZUNJ6v1
+dAcAn1dT6Y1wkWzbBqG770d7SUItOmaH
+=FWES
 -----END PGP SIGNATURE-----
